fix title length too long display problem

--- a/blogweb/app/static/post_list.css
+++ b/blogweb/app/static/post_list.css
@@ -2,14 +2,11 @@
   width: 80px;
 }
 
-.post-list-title {
-  width: 100%
-}
-
 .post-list-middle {
   display: flex;
   flex-direction: column;
   min-width: 50%;
+  max-width: 400px;
 }
 
 .user_popup{
@@ -18,25 +15,34 @@
 }
 
 .post-list-middle-content {
-  width:60%;
+  /* width:60%; */
   margin-left: 20px;
-}
-
-.post-list-title-text {
-  color: black;
-  text-decoration: none;
-}
-.post-list-title-text:hover {
-  color: #0d6efd;
+  display: flex;
+  flex-direction: column;
 }
 
 .post-list-title {
   font-size: 24px;
   margin-top: 10px;
-  white-space: nowrap;
+  /* white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: ellipsis; */
 }
+
+.post-list-title-text {
+  color: black;
+  text-decoration: none;
+  display: inline-block;
+  max-width: 400px; 
+  overflow: hidden;
+  text-overflow: ellipsis; /* Optional: to truncate overflowing text */
+  white-space: nowrap; 
+}
+.post-list-title-text:hover {
+  color: #0d6efd;
+}
+
+
 
 .post-list-count {
   min-width: 100px;
